@@ -1,5 +1,6 @@
 20160805:
-	* ezgui.c: Fixed the status/progress bar displaying issue.
+	* ezgui.c: Fixed the status/progress bar displaying issue in Windows
+	The optind could go ahead of argc which caused -1 'fum' in ezgui_run()
 	* ezgui.c: Fixed the logic that didn't run auto mode while initial.
 	* ezgui.c: Fixed accessing utf-8 filename in Windows.
 	* ezicon.h: use the 128x128 icon only
